# Coconut-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
engine/3dpart/imgui/examples/: README.txt
engine/src/: CMakeLists.txt
engine/src/editor/: CMakeLists.txt  main.cpp
engine/src/runtime/: engine.cpp  engine.h
engine/src/runtime/core/log/: log_system.cpp  log_system.h
engine/src/runtime/function/global/: global_context.cpp  global_context.h
engine/src/runtime/function/render/: render_common.h  render_mesh.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/src/runtime/function/render/interface/: rhi.h
engine/src/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_rhi_struct.h  vulkan_util.cpp  vulkan_util.h
engine/src/runtime/function/render/pass/: directional_light_pass.cpp  directional_light_pass.h  main_camera_pass.cpp  main_camera_pass.h
shaders/: 01_triangle.frag  01_triangle.vert  01_triangle_frag.spv  01_triangle_vert.spv  compile_shader.bat  compile_shader_cube.bat  cube.frag  cube.vert  directional_light_shadow.frag  directional_light_shadow.vert  directional_light_shadow_vert.spv  frag_cube.spv  mesh.vert  vert_cube.spv
src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/example/1_hello_triangle/: 1_hello_triangle.cpp  CMakeLists.txt
src/framework/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Object.cpp  Object.h  Reference.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  common.cpp  common.h  struct.h
src/framework/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/utils/: shaders.cpp  utils.cpp
